[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "tse-data"
version = "0.9.0"
description = "client for tsetmc api"
authors = [
    {name = "s.diaco", email = "dyaco8464@yahoo.com"},
]
dependencies = [
    "aiohttp>=3.8.5",
    "jdatetime>=4.1.1",
    "pandas>=2.0.3",
    "SQLAlchemy>=2.0.20",
    "tqdm>=4.66.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

