[metadata]
name = dtse
description = client for tsetmc api
readme = "README.md"
author = Diaco
license = MIT
license_file = LICENSE
requires-python = ">=3.8"
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    dtse
install_requires =
    requests>=2
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.0.1
    pytest-asyncio>=0.18.1
    flake8>=4.0.1
    pylint>=2.12.2

[options.package_data]
dtse = py.typed

[flake8]
max-line-length = 160